Fix alignment of large button text when used with an anchor element. (#219)
* Fix alignment of large button text when used with an anchor element.

--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -153,6 +153,9 @@
 	@include oTypographySans($weight: 'semibold');
 	@include _oButtonsSizeContent($size);
 	display: inline-block;
+	// Use flexbox to align text vertically when used with an anchor element.
+	display: inline-flex; // sass-lint:disable-line no-duplicate-properties
+	align-items: center;
 	box-sizing: border-box;
 	vertical-align: middle;
 	margin: 0;
@@ -185,7 +188,6 @@
 /// Styles shared by all buttons of a given size with an icon.
 /// @param {Null|Number} $size
 @mixin _oButtonsIconBaseContent($size: null) {
-	display: inline-block;
 	background-repeat: no-repeat;
 	background-position: 3px;
 	padding-left: _oButtonsGet('icon-padding', $size);
